--- a/online_identification_guides/index.qmd
+++ b/online_identification_guides/index.qmd
@@ -14,6 +14,14 @@ A useful free resource.
 
 Great order level guide.
 
+## European Bee Genera
+
+<a href="https://keys.lucidcentral.org/search/key-to-european-genera-of-bees-anthophila/">European Bees</a>
+
+## BWARS Bee Genera
+
+https://bwars.com/content/britains-bees-chapter-4-pt1-identification-keys-genera
+
 
 
 
