--- a/online_identification_guides/index.qmd
+++ b/online_identification_guides/index.qmd
@@ -20,8 +20,6 @@ Great order level guide.
 
 ## BWARS Bee Genera
 
-https://bwars.com/content/britains-bees-chapter-4-pt1-identification-keys-genera
-
-
+<a href="https://bwars.com/content/britains-bees-chapter-4-pt1-identification-keys-genera">Bee Genera</a>
 
 
